--- a/myapp/templates/public/index.html
+++ b/myapp/templates/public/index.html
@@ -34,23 +34,26 @@
             </div>
 
             <div class="carousel-inner">
-                <div class="carousel-item active c-item">
-                    <img src="{{url_for('static', filename='img/public/graduationimg2022_2.jpg')}}" class="d-block w-100 c-img" alt="Slide 0">
+
+                <div class="carousel-item c-item active">
+                    <img src="{{url_for('static', filename='img/public/heros/biulding1.jpg')}}" class="d-block w-100 c-img" alt="Slide 1">
+                    <div class="carousel-caption top-0 mt-4">
+                        <p class="v2_font text-title fs-3 mt-5">Good environment, good study</p>
+                        <h1 class="display-1 fw-bolder text-capitalize hu-hero-font">WELCOME TO THE BIG ENVIRONMENT</h1>
+                    </div>
+                </div>
+
+                <div class="carousel-item  c-item">
+                    <img src="{{url_for('static', filename='img/public/heros/students.jpg')}}" class="d-block w-100 c-img" alt="Slide 0">
                     <div class="carousel-caption top-0 mt-4">
                         <p class="v2_font  fs-3 text-title">Students are the creators</p>
                         <h1 class="display-1 fw-bolder text-capitalize hu-hero-font">JOIN US AND BECOME CREATIVE</h1>
                         <!-- <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Book a tour</button> -->
                     </div>
                 </div>
+                
                 <div class="carousel-item c-item">
-                    <img src="{{url_for('static', filename='img/public/greate_compus.jpg')}}" class="d-block w-100 c-img" alt="Slide 1">
-                    <div class="carousel-caption top-0 mt-4">
-                        <p class="v2_font text-title fs-3 mt-5">Good environment, good study</p>
-                        <h1 class="display-1 fw-bolder text-capitalize hu-hero-font">WELCOME TO THE BIG ENVIRONMENT</h1>
-                    </div>
-                </div>
-                <div class="carousel-item c-item">
-                    <img src="{{url_for('static', filename='img/public/three_graduating_girls_2023.jpg')}}" class="d-block w-100 c-img" alt="Slide 2">
+                    <img src="{{url_for('static', filename='img/public/practical/practical3.jpg')}}" class="d-block w-100 c-img" alt="Slide 2">
                     <div class="carousel-caption top-0 mt-4">
                         <p class="v2_font text-title fs-3 mt-5">Destination activities</p>
                         <h1 class="display-1 fw-bolder text-capitalize hu-hero-font">WE ALWAYS SEEK DIFFERENCE</h1>
@@ -83,7 +86,7 @@
                     </div>
                 </div>
                 <div class="carousel-item c-item">
-                    <img src="{{url_for('static', filename='img/public/telecomstudent-girls.jpg')}}" class="d-block w-100 c-img" alt="Slide 5">
+                    <img src="{{url_for('static', filename='img/public/LAB/LAB1.jpg')}}" class="d-block w-100 c-img" alt="Slide 5">
                     <div class="carousel-caption top-0 mt-4">
                         <p class="v2_font text-title fs-3 mt-5">Students have the priority</p>
                         <h1 class="display-1 fw-bolder text-capitalize hu-hero-font">FUTURE GAME CHANGERS ARE STUDENTS
