--- a/myapp/templates/public/public_layout.html
+++ b/myapp/templates/public/public_layout.html
@@ -81,6 +81,17 @@
 
     <!-- side bars end -->
 
+    <div class="container-lg ps-lg-5 pe-lg-5 border border-success badge-success rounded mt-2 text-center  py-1 mb-2">
+        <a href="https://portal.hu.edu.so/">
+            <span class="text-white ps-3 pe-3 rounded-5 px-2 pt-2 pb-2 blinking-announcement"
+                style="font-size: .8rem; background-color: #7d0552;">Exam Results Announcement</span> <a
+                href="https://portal.hu.edu.so/" data-mdb-ripple-init type="button"
+                class="btn me-3 px-2 py-1 shadow-0 text-primary link-primary text-decoration-underline">S<span
+                    class="text-lowercase">ee results &#8594;</span>
+            </a>
+        </a>
+    </div>
+
     <div id="progress">
         <span id="progress-value">
             <!-- <span class="material-symbols-outlined">
