--- a/myapp/templates/public/public_layout.html
+++ b/myapp/templates/public/public_layout.html
@@ -81,7 +81,7 @@
 
     <!-- side bars end -->
 
-    <div class="container-lg ps-lg-5 pe-lg-5 border border-success badge-success rounded mt-2 text-center  py-1 mb-2">
+    <div class="container-lg ps-lg-5 pe-lg-5 border border-success badge-success rounded mt-2 text-center  py-1 mb-2 pb-2">
         <a href="https://portal.hu.edu.so/">
             <span class="text-white ps-3 pe-3 rounded-5 px-2 pt-2 pb-2 blinking-announcement"
                 style="font-size: .8rem; background-color: #7d0552;">Exam Results Announcement</span> <a
