--- a/myapp/static/css/public/style.css
+++ b/myapp/static/css/public/style.css
@@ -393,176 +393,180 @@ div.list-group.list-group-flush>.list-group-item-action {
 }
 
 .slider {
-  position: relative;
   background-color: #ccc;
-  height: 70vh;
-  min-height: 500px;
-  overflow: hidden;
+  position: relative;
+  height: 80vh;
 }
 
-/* Large Screen Layout (lg and up) */
 .slider .slides {
-  position: absolute;
-  top: 50%;
+  transition: transform 0.6s ease, left 0.6s ease, bottom 0.6s ease;
+}
+
+.slides {
   transform: translateY(-50%);
-  width: 240px;
+  width: 200px;
   height: 320px;
   background-image: var(--img);
   background-size: cover;
-  background-position: center;
+  background-position: 50% 30%;
   transition: 0.5s;
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
 }
 
-.slider .slides:nth-child(1),
-.slider .slides:nth-child(2) {
-  position: absolute;
-  top: 0;
-  left: 0;
+.slider .slides:nth-child(1) {
+  position: relative;
   width: 100%;
   height: 100%;
   transform: translateY(0);
-  box-shadow: none;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0);
   background-size: cover;
-  z-index: 1;
+}
+
+.slider .slides:nth-child(2) {
+  position: absolute;
+  top: 50%;
+  left: calc(50% + 100px);
 }
 
 .slider .slides:nth-child(3) {
-  left: calc(50% + 100px);
-  z-index: 999;
-}
-
-.slider .slides:nth-child(3) .content {
-  display: none;
+  position: absolute;
+  top: 50%;
+  left: calc(50% + 320px);
 }
 
 .slider .slides:nth-child(4) {
-  left: calc(50% + 370px);
-  z-index: 999;
+  position: absolute;
+  top: 50%;
+  left: calc(50% + 600px);
 }
 
-.slider .slides:nth-child(4) .content {
-  display: none;
-}
-
-
-.slider.slides:nth-child(5) {
-  left: calc(50% + 1020px);
-}
-
-.slider .slides:nth-child(5) .content {
-  display: none;
+.slider .slides:nth-child(5) {
+  position: absolute;
+  top: 50%;
+  left: calc(50% + 600px);
 }
 
 .slider .slides:nth-child(6) {
-  left: calc(50% + 1020px);
-}
-
-.slider .slides:nth-child(6) .content {
-  display: none;
-}
-
-/* Common Styles */
-.buttons {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.buttons span {
-  position: relative;
-  width: 50px;
-  height: 50px;
-  background-color: #111;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-}
-
-.buttons span::before {
-  content: '';
   position: absolute;
-  width: 15px;
-  height: 15px;
-  border-top: 4px solid #fff;
-  border-left: 4px solid #fff;
-  transform: rotate(315deg) translate(5px, 5px);
+  top: 50%;
+  left: calc(50% + 600px);
 }
 
-.buttons span:nth-child(2)::before {
-  transform: rotate(135deg) translate(2px, 2px);
+.prev {
+  background-color: black;
+  color: white;
+  padding: 7px 2px 7px 12px;
+  cursor: pointer;
+  border-radius: 50px;
+  margin: 0 10px;
 }
 
-.buttons span:active {
-  opacity: 0.5;
+.next {
+  background-color: black;
+  color: white;
+  padding: 7px;
+  cursor: pointer;
 }
 
-.content {
-  position: relative;
-  padding: 40px;
-  max-width: 600px;
-  transition: 0.25s;
-  transition-delay: 0s;
-  transform: translateY(40px);
-  z-index: 10000;
-  color: rgb(247, 245, 246);
+.nav-tabs .nav-link {
+  color: black;
+  border-bottom: 1px white !important;
+  border-radius: 0.25rem 0.25rem 0 0;
 }
 
-.content h2 {
-  font-size: 4em;
-}
-
-.slider .slides:nth-child(1) .content,
-.slider .slides:nth-child(2) .content {
-  opacity: 1;
-  transform: translateY(0px);
-  transition-delay: 0.5s;
+.nav-tabs .nav-link.active {
+  border-bottom: 1px solid !important;
+  color: blue;
 }
 
 /* Mobile Layout (below lg) */
 @media (max-width: 991.98px) {
   .slider {
-    height: 50vh;
+    height: 90vh;
     min-height: 400px;
     position: relative;
+    background-color: white;
   }
 
   .slider .slides {
+    background-color: #ccc;
     position: absolute;
     width: 120px;
-    height: 160px;
+    height: 110px;
     top: auto;
-    bottom: 20px;
     transform: none;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .slider .slides:nth-child(1) {
+    position: relative;
+    width: 100%;
+    height: 78%;
+    transform: translateY(0);
+    box-shadow: 0;
+    background-size: cover;
+  }
+
+  .slider .slides:nth-child(2) {
+    position: absolute;
+    width: 120px;
+    height: 110px;
+    top: auto;
+    transform: none;
+    box-shadow: 0;
+    bottom: 0;
+    left: 0;
   }
 
   .slider .slides:nth-child(3) {
-    left: 20px;
+    position: absolute;
+    width: 120px;
+    height: 110px;
+    top: auto;
+    transform: none;
+    box-shadow: 0;
+    left: 130px;
+    bottom: 0;
   }
 
   .slider .slides:nth-child(4) {
-    left: 160px;
+    position: absolute;
+    width: 120px;
+    height: 110px;
+    top: auto;
+    transform: none;
+    box-shadow: 0;
+    left: 260px;
+    bottom: 0;
   }
 
   .slider .slides:nth-child(5) {
-    left: 300px;
-    z-index: 9999;
+    position: absolute;
+    width: 120px;
+    height: 110px;
+    top: auto;
+    transform: none;
+    box-shadow: 0;
+    left: 390px;
+    bottom: 0;
   }
-
 
   .slider .slides:nth-child(6) {
-    left: 440px;
-    z-index: 9999
+    position: absolute;
+    width: 120px;
+    height: 110px;
+    top: auto;
+    transform: none;
+    box-shadow: 0;
+    left: 520px;
+    bottom: 0;
   }
 }
+
 
 /* test rotating images end ======================================================*/
 
