--- a/myapp/templates/public/index.html
+++ b/myapp/templates/public/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="carousel-item c-item">
-                <img src="{{url_for('static', filename='img/public/convocational/7.jpg')}}" class="d-block w-100 c-img"
+                <img src="{{url_for('static', filename='img/public/Convocational/7.jpg')}}" class="d-block w-100 c-img"
                     alt="Slide 6">
                 <div class="carousel-caption top-0 mt-4">
                     <p class="v2_font text-title fs-3 mt-5">🎓 Hormuud University Class of 2024</p>
@@ -114,7 +114,7 @@
             </div>
 
             <div class="carousel-item c-item">
-                <img src="{{url_for('static', filename='img/public/exam/exam4.jpg')}}" class="d-block w-100 c-img"
+                <img src="{{url_for('static', filename='img/public/Exam/exam4.jpg')}}" class="d-block w-100 c-img"
                     alt="Slide 8">
                 <div class="carousel-caption top-0 mt-4">
                     <p class="v2_font text-title fs-3 mt-5">👥 Moments that Matter</p>
@@ -183,7 +183,7 @@
         <div class="col mb-3 ">
 
             <div class="image-container">
-                <img src="{{url_for('static', filename='img/public/events/21.jpg')}}" alt="Your Image Description">
+                <img src="{{url_for('static', filename='img/public/events/21.JPG')}}" alt="Your Image Description">
                 <div class="text-overlay">
                     <h1 class="display-6 fw-bold text-white fs-6 v2_font">Creative@HU</h1>
                     <p class="text-white mb-0 text-center v2_font">⚙️🌊 Engineering Beyond the Shoreline</p>
