--- a/myapp/templates/public/public_layout.html
+++ b/myapp/templates/public/public_layout.html
@@ -153,16 +153,16 @@
                                               Message
                                             </a>
                                             <a href="{{url_for('deputy_vice_president_office')}}"
-                                              class="list-group-item list-group-item-action ps-0 the_text disabled text-muted">Deputy
+                                              class="list-group-item list-group-item-action ps-0 the_text">Deputy
                                               Vice President
                                               Office</a>
-                                            
-                                            <a href="{{url_for('deans_and_director')}}" class="list-group-item list-group-item-action ps-0 disabled text-muted"
+                                            <!-- deans_and_director -->
+                                            <a href="{{url_for('dean_message')}}" class="list-group-item list-group-item-action ps-0 "
                                               aria-disabled="true">Deans &
                                               Director</a>
                                             <a href="{{url_for('public_relationship_office')}}" class="list-group-item list-group-item-action ps-0">Public
                                               Relations Office</a>
-                                            <a href="{{url_for('register_office')}}" class="list-group-item list-group-item-action ps-0 disabled text-muted">Registar
+                                            <a href="{{url_for('register_office')}}" class="list-group-item list-group-item-action ps-0">Registar
                                               Office</a>
                                             <a href="{{url_for('finance_office')}}" class="list-group-item list-group-item-action ps-0">Finance
                                               Office</a>
